Правка багов для ЛК и прочих мелких ошибок

--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -2452,7 +2452,7 @@ footer {
 	top: 1px;
 	right: 0; 
 }
-.slider-favorite-products {
+.slider-favorite-products, .slider-preferable-products {
     box-sizing: border-box;
     padding: 0 105px;
 }
