--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -24,7 +24,7 @@ a img {
 .modal-content {
     min-height: 40px;
 }
-.total-price-error {
+.total-price-error, .customer-exists-error {
     font-size:12px;
     color:#c00;
     height:2.5em;
@@ -3974,7 +3974,7 @@ footer {
 .show-forgot {
 	display: none;
 }
-.password-sent {
+.password-sent, .login-wrong {
 	display: none;
     vertical-align: top;
     font-size: 17px;
