Исправления косяка с пропажей бокового меню

--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -4011,6 +4011,10 @@ footer {
 .button-alphabetic {
 	display: none;
 }
+.button-alphabetic-shadow{
+	display: none;
+}
+
 .delivery-address {
 	width: 100%;
     border: none;
@@ -4373,13 +4377,12 @@ footer {
 	    z-index: 999;
 	}
 
-    .button-alphabetic-shadow{
-    -webkit-box-shadow: 0px 2px 10px rgba(0,0,0,.3), 0px 0px 1px rgba(0,0,0,.1), inset 0px 1px 0px rgba(255,255,255,.25), inset 0px -1px 0px rgba(0,0,0,.15);
-    -moz-box-shadow: 0px 2px 10px rgba(0,0,0,.3),0px 0px 1px rgba(0,0,0,.1),inset 0px 1px 0px rgba(255,255,255,.25),inset 0px -1px 0px rgba(0,0,0,.15);
-    /* box-shadow: 0px 2px 10px rgba(0,0,0,.3), 0px 0px 1px rgba(0,0,0,.1), inset 0px 1px 0px rgba(255,255,255,.25), inset 0px -1px 0px rgba(0,0,0,.15); */
-    }
-
-    }
+	.button-alphabetic-shadow{
+		display: block !important;
+		-webkit-box-shadow: 0px 2px 10px rgba(0,0,0,.3), 0px 0px 1px rgba(0,0,0,.1), inset 0px 1px 0px rgba(255,255,255,.25), inset 0px -1px 0px rgba(0,0,0,.15);
+		-moz-box-shadow: 0px 2px 10px rgba(0,0,0,.3),0px 0px 1px rgba(0,0,0,.1),inset 0px 1px 0px rgba(255,255,255,.25),inset 0px -1px 0px rgba(0,0,0,.15);
+		/* box-shadow: 0px 2px 10px rgba(0,0,0,.3), 0px 0px 1px rgba(0,0,0,.1), inset 0px 1px 0px rgba(255,255,255,.25), inset 0px -1px 0px rgba(0,0,0,.15); */
+	}
 
 
 
