--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -748,7 +748,7 @@ header {
 .big-picture {
 	width: 100%;
 	height: 507px;
-	background: url(../img/big_pic.jpg) no-repeat center top;
+	background: url(../img/big_pic_3.jpg) no-repeat center top;
 	background-size: cover;
 	position: relative;
 	z-index: 1;
