--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -3401,11 +3401,10 @@ footer {
     text-align:center;
 }
 .b-d_coupon {
-	font-size: 16px;
+	font-size: 14px;
 	text-align: center;
-	font-weight: 900;
-	color: #749D3E;
-	letter-spacing: 3px;
+	font-weight: 700;
+	color: #A7B1BC;
 	cursor: pointer;
 }
 .b-d_coupon:hover {
