--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -4181,8 +4181,8 @@ footer {
 	border: none;
 	resize: none;
 	color: #b2b2b2;
-	font-size: 12px;
-	font-weight: 700;
+	font-size: 14px;
+	font-weight: normal;
 	text-align: center;
 	box-sizing: border-box;
     padding: 10px;
