Ошибка в CSS. исправление

--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -2352,6 +2352,7 @@ footer {
     border: 2px solid #5D9E32;
     color: #5D9E32;
     background: transparent;
+}
 
 .list-composition {
 	width: 100%;
