--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -354,6 +354,9 @@ header {
     max-width:100%;
     width:100px;
 }
+.table-b_width2>div {
+    white-space:nowrap;
+}
 .b-b_quantity {
 	width: 18px;
 	height: 18px;
