Вывод адреса у нового покупателя и правка по верстке полей в лк

--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -2640,6 +2640,9 @@ footer {
 	box-sizing: border-box;
 	padding: 15px 21px 15px 21px;
 }
+.f-p_input[data-name="customer_address"] {
+    color:#333;
+}
 .f-p_input.input-error_2 {
 	background: #d00;
 	color: #ffffff;
