--- a/new_design/css/selectric.css
+++ b/new_design/css/selectric.css
@@ -15,9 +15,12 @@
 	-webkit-border-radius: 16px / 17px;
 	border-radius: 16px / 17px;
 	background-color: #fff;
-	-moz-box-shadow: -2px 1px 7px rgba(0,0,0,.11);
+	/*-moz-box-shadow: -2px 1px 7px rgba(0,0,0,.11);
 	-webkit-box-shadow: -2px 1px 7px rgba(0,0,0,.11);
-	box-shadow: -2px 1px 7px rgba(0,0,0,.11);
+	box-shadow: -2px 1px 7px rgba(0,0,0,.11);*/
+    -moz-box-shadow: 0 5px 10px rgba(6,21,38,.17);
+    -webkit-box-shadow: 0 5px 10px rgba(6,21,38,.17);
+    box-shadow: 0 5px 10px rgba(6,21,38,.17);
 	position: relative;
 }
 .selectric .label {
