--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -1945,11 +1945,11 @@ footer {
 	box-sizing: border-box;
 	cursor: pointer;
 	outline: none;
-	border: 2px solid #8cc049;
+	border: 2px solid #739d3d;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
-	background-color: #8cc049;
+	background-color: #739d3d;
 	-moz-box-shadow: 0 4px 7px rgba(0,0,0,.3);
 	-webkit-box-shadow: 0 4px 7px rgba(0,0,0,.3);
 	box-shadow: 0 4px 7px rgba(0,0,0,.3);
@@ -1963,10 +1963,16 @@ footer {
 	box-sizing: border-box;
 	padding: 16px 0;
 }
+
+.m-product_submit.m-product_submit2 {
+	border: 2px solid #5D9E32 !important;
+	color: #5D9E32 !important;
+	background: transparent !important;
+}
+
 .m-product_submit:hover {
-	border: 2px solid #5D9E32;
-	color: #5D9E32;
-	background: transparent;
+	background-color: #58772F;
+	border-color:#58772F;
 	transition: 0.3s ease-in-out all;
 }
 .m-product_submit.navl {
@@ -1978,11 +1984,7 @@ footer {
     color:#f17e46;
     border-color:#f17e46;
 }
-.m-product_submit.m-product_submit2 {
-	border: 2px solid #5D9E32;
-	color: #5D9E32;
-	background: transparent;
-}
+
 .m-product_select {
 	width: 142px;
 	height: 37px;
@@ -1992,10 +1994,10 @@ footer {
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
-	/*background-color: #fff;*/
-	/*-moz-box-shadow: -2px 1px 7px rgba(0,0,0,.11);*/
-	/*-webkit-box-shadow: -2px 1px 7px rgba(0,0,0,.11);*/
-	/*box-shadow: -2px 1px 7px rgba(0,0,0,.11);*/
+	background-color: #fff;
+	-moz-box-shadow: -2px 1px 7px rgba(0,0,0,.11);
+	-webkit-box-shadow: -2px 1px 7px rgba(0,0,0,.11);
+	box-shadow: -2px 1px 7px rgba(0,0,0,.11);
 }
 .m-product_select.modal-select
 {
@@ -2026,6 +2028,13 @@ footer {
 	text-align: center;
 	line-height: 37px;
 }
+
+.m-product_price_shadow {
+	-moz-box-shadow: 0 5px 10px rgba(6,21,38,.17);
+	-webkit-box-shadow: 0 5px 10px rgba(6,21,38,.17);
+	box-shadow: 0 5px 10px rgba(6,21,38,.17);
+}
+
 /** END no-pictures **/ 
 /** page_2 **/ 
 .page_2 header {
