--- a/new_design/css/selectric.css
+++ b/new_design/css/selectric.css
@@ -590,6 +590,9 @@
 		-moz-border-radius: 2px;
 		-webkit-border-radius: 2px;
 		border-radius: 2px;
+        padding-top: 4px;
+        height: 20px;
+
 	}
 	.c-p_select .selectric .label {
 		font-size: 9px;
