--- a/new_design/css/selectric.css
+++ b/new_design/css/selectric.css
@@ -460,7 +460,7 @@
 	/*background-color: #eee;*/
 }
 .delivery-address .selectric-items li:first-child {
-	display: none;
+	/*display: none;*/
 }
 .days-select {
 	float: left;
